jest_out2.txt
FAIL tests/analytics.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\khumb\Desktop\your-repo-name\Forest-Capture\src\modules\analytics.js:3
    import { $, esc } from './ui.js';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 4 |[39m [90m */[39m
     [90m 5 |[39m
    [31m[1m>[22m[39m[90m 6 |[39m [36mconst[39m [33mEcologicalAnalytics[39m [33m=[39m require([32m'../src/modules/analytics'[39m)[33m;[39m
     [90m   |[39m                             [31m[1m^[22m[39m
     [90m 7 |[39m
     [90m 8 |[39m describe([32m'EcologicalAnalytics'[39m[33m,[39m () [33m=>[39m {
     [90m 9 |[39m   [0m

      at Runtime.createScriptFromCode (../../../AppData/Local/npm-cache/_npx/b8d86e6551a4f492/node_modules/jest-runtime/build/index.js:1314:40)
      at Object.require (tests/analytics.test.js:6:29)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.425 s
Ran all test suites.
